--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,15 +6,15 @@ project(hello-world-static-lib
     LANGUAGES CXX
 )
 
-add_library(hello-static-lib STATIC src/hello-static-lib.cpp) 
+add_library(hello_static_lib STATIC src/hello_static_lib.cpp) 
 
-set_target_properties(hello-static-lib PROPERTIES
+set_target_properties(hello_static_lib PROPERTIES
     VERSION ${PROJECT_VERSION}
     SOVERSION ${PROJECT_VERSION_MAJOR}
-    PUBLIC_HEADER ${CMAKE_CURRENT_LIST_DIR}/include/hello-static-lib.h) 
-target_include_directories(hello-static-lib PRIVATE ${CMAKE_CURRENT_LIST_DIR}/include)
+    PUBLIC_HEADER ${CMAKE_CURRENT_LIST_DIR}/include/hello_static_lib.h) 
+target_include_directories(hello_static_lib PRIVATE ${CMAKE_CURRENT_LIST_DIR}/include)
 
-add_custom_command(TARGET hello-static-lib 
+add_custom_command(TARGET hello_static_lib 
     POST_BUILD COMMAND ${CMAKE_COMMAND} -E 
-    copy_if_different ${CMAKE_CURRENT_LIST_DIR}/include/hello-static-lib.h  
-    $<TARGET_FILE_DIR:hello-static-lib>) 
+    copy_if_different ${CMAKE_CURRENT_LIST_DIR}/include/hello_static_lib.h  
+    $<TARGET_FILE_DIR:hello_static_lib>) 
